# tests

./: .coverage  pyproject.toml  readme.md
.github/workflows/: ci.yaml
src/mypkg/: funcs.py
src/mypkg.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_of_funcs.py
