[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg"          # то же имя, что папка в src
version = "0.1.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
]